appId: com.hp.impulse.sprocket
name: ED_05 - Brightness
---

- tapOn: "Brightness"
- swipe:
    start: "30%,90%"
    end: "80%,90%"
- swipe:
    start: "80%,90%"
    end: "30%,90%"
- tapOn: "Done"
