appId: com.hp.impulse.sprocket
name: ED_06 - Contrast
---
- tapOn: "Contrast"
- swipe:
    start: "30%,90%"
    end: "80%,90%"
- tapOn: "Done"
