appId: com.hp.impulse.sprocket
name: ED_08 - Saturation
---

- tapOn: "Saturation"
- swipe:
    start: "30%,90%"
    end: "80%,90%"
- tapOn: "Done"
