appId: com.hp.impulse.sprocket
name: ED_10 - Shadows
---

- tapOn: "Shadows"
- swipe:
    start: "30%,90%"
    end: "80%,90%"
- tapOn: "Done"
