appId: com.hp.impulse.sprocket
name: Agree terms if shown
---
- waitForAnimationToEnd:
    timeout: 2000

- runFlow:
    when:
      visible: "Terms and Conditions"
    commands:
      - assertVisible: "Terms and Conditions"
      - runFlow:
          when:
            visible: "TERMS OF USE"
          commands:
            - assertVisible: "TERMS OF USE"
      - tapOn: "Agree Terms and Conditions"
      - waitForAnimationToEnd:
          timeout: 2000

- runFlow:
    when:
      visible: "My gallery"
    commands:
      - assertVisible: "My gallery"
