appId: com.hp.impulse.sprocket
---
- tapOn:
    text: "Email*"
    optional: true
- tapOn:
    text: "Email"
    optional: true
- inputText: Atomation47@yopmail.com

- tapOn:
    text: "Password*"
    optional: true
- tapOn:
    text: "Password"
    optional: true
- inputText: Test123

- tapOn:
    text: "Log In"
    optional: true
- tapOn:
    text: "Login"
    optional: true

- runFlow:
    when:
      visible: "You have entered an invalid email id or password"
    commands:
      - tapOn: "Ok"

- tapOn:
    text: "Password*"
    optional: true
- tapOn:
    text: "Password"
    optional: true
- eraseText
- inputText: Test12345

- tapOn:
    text: "Log In"
    optional: true
- tapOn:
    text: "Login"
    optional: true
