appId: com.hp.impulse.sprocket
---
- runFlow:
    when:
      visible: "Print"
    commands:
      - tapOn: "Print"
      - waitForAnimationToEnd:
          timeout: 2000

# ------------------------------
# Fine-tune popup (optional)
# ------------------------------
- runFlow:
    when:
      visible: "Time to Fine-Tune"
    commands:
      - runFlow:
          when:
            visible: "Ok"
          commands:
            - tapOn: "Ok"
      - runFlow:
          when:
            visible: "OK"
          commands:
            - tapOn: "OK"
      - waitForAnimationToEnd:
          timeout: 2000
