appId: com.hp.impulse.sprocket
name: Signup Flow
---
- waitForAnimationToEnd:
    timeout: 2000

# ------------------------------
# Signup Screen: Assert all elements + tap "I'll do it later"
# ------------------------------
- waitForAnimationToEnd:
    timeout: 2000

- assertVisible: "Create an account"
- assertVisible:
    text: "Full Name*"
    optional: true
- assertVisible:
    text: "Full Name"
    optional: true
- assertVisible:
    text: "Email*"
    optional: true
- assertVisible:
    text: "Email"
    optional: true
- assertVisible:
    text: "Password*"
    optional: true
- assertVisible:
    text: "Password"
    optional: true
- assertVisible:
    text: "SIGN UP"
    optional: true
- assertVisible: "I'll do it later"
- assertVisible:
    text: "Already have an account?"
    optional: true

- tapOn: "I'll do it later"
- waitForAnimationToEnd:
    timeout: 2000
