appId: com.hp.impulse.sprocket
---

# Cooldown
- runFlow:
    when:
      visible: "Camera is cooling down"
    commands:
      - tapOn: "Ok"
      - waitForAnimationToEnd:
          timeout: 2000

# Out of paper
- runFlow:
    when:
      visible: "You are out of paper"
    commands:
      - tapOn: "Ok"
      - waitForAnimationToEnd:
          timeout: 2000

# Print Successful
- runFlow:
    when:
      visible: "Print Successful"
    commands:
      - takeScreenshot: "print_success"
      - tapOn:
          point: 2%,5%
      - waitForAnimationToEnd:
          timeout: 2000
